--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <div class="carousel-item active">
                 <div class="container">
                     <img class="testimonio-imagen rounded-circle" src="imagenes/cliente1.svg" alt="Foto de Carlos">
-                    <p class="testimonio-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis dolorum obcaecati fuga pariatur velit, aperiam quo voluptas repellendus. Nemo non error voluptatibus hic, voluptatum sit voluptas quos excepturi ad facilis.</p>
+                    <p class="testimonio-texto">pertenecer a tecnolochicasPro fue una gran oportunidad para mi, la implementacion de mis conocimientos, los cuales me serviran para mi proxima carrera.</p>
                     <div class="testimonio-info">
                         <p class="cliente">Carlos</p>
                         <p class="cargo">Director de Area TI</p>
