--- a/index.html
+++ b/index.html
@@ -286,18 +286,18 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="container">
-                    <img class="testimonio-imagen rounded-circle" src="imagenes/cliente1.svg" alt="Foto de Carlos">
+                    <img class="testimonio-imagen rounded-circle" src="imagenes/cliente1.svg" alt="Foto de Monse">
                     <p class="testimonio-texto">pertenecer a tecnolochicasPro fue una gran oportunidad para mi, la implementacion de mis conocimientos, los cuales me serviran para mi proxima carrera.</p>
                     <div class="testimonio-info">
-                        <p class="cliente">Carlos</p>
-                        <p class="cargo">Director de Area TI</p>
+                        <p class="cliente">monse</p>
+                        <p class="cargo">compañera de curso</p>
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="container">
                     <img class="testimonio-imagen rounded-circle" src="imagenes/cliente2.svg" alt="Foto de Laura">
-                    <p class="testimonio-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laudantium beatae molestiae repudiandae nostrum? Expedita odit tenetur enim? Nostrum aut quis, eligendi fugit vel modi qui dolorum minima unde consectetur.</p>
+                    <p class="testimonio-texto">el curso fue una oportunidad de aprender nuevas cosas</p>
                     <div class="testimonio-info">
                         <p class="cliente">Laura</p>
                         <p class="cargo">Directora administrativa</p>
@@ -306,11 +306,11 @@
             </div>
             <div class="carousel-item">
                 <div class="container">
-                    <img class="testimonio-imagen rounded-circle" src="imagenes/cliente3.svg" alt="Foto de Alex">
-                    <p class="testimonio-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laudantium beatae molestiae repudiandae nostrum? Expedita odit tenetur enim? Nostrum aut quis, eligendi fugit vel modi qui dolorum minima unde consectetur.</p>
+                    <img class="testimonio-imagen rounded-circle" src="imagenes/cliente3.svg" alt="Foto de Maritza">
+                    <p class="testimonio-texto"> El curso es una herramienta muy útil para el conocimiento de lenguajes de programación es muy importante ser autodidacta para adquirir nuevos conocimientos acerca de programación</p>
                     <div class="testimonio-info">
-                        <p class="cliente">Alex</p>
-                        <p class="cargo">Director de Seguridad</p>
+                        <p class="cliente">Maritza</p>
+                        <p class="cargo">Embajadora Maritza</p>
                     </div>
                 </div>
             </div>
