--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Titulo -->
-    <title>Fanny Reyes | Desarrollo web frontend </title>
+    <title>Fanny Reyes | Desarrollo web Front-End </title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="imagenes/icono.png" type="/x-icon">
+    <link rel="shortcut icon" href="imagenes/icono.png" type="imagenes/x-icon">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- Iconos Boostrap -->
@@ -36,7 +36,7 @@
                 </a>
                 <ul class="navbar-nav d-flex justify-content-center align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#sobremi">Sombre mí</a>
+                        <a class="nav-link active" aria-current="page" href="#sobre-mi">Sombre mí</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="#proyectos">Proyectos</a>
@@ -57,7 +57,7 @@
         <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
             <img class="hero-imagen-desarrollador round-circle" src="imagenes/imagenesDesarrolladores/desarrollador-ejemplo.svg" alt="Foto de Fanny">
             <h1>Hola, Soy Fanny Reyes</h1>
-            <!--<h2>Aprendiz de desarrollo de sitios web y escribo articulos sobre programación.</h2>-->
+            <!--<h2>Aprendiz del desarrollo de sitios web y escribo articulos sobre programación.</h2>-->
        <!-- Animacion con JavaSript -->
        <h2 class="text-primary mb-4" id="typewriter"></h2>
     </div>
@@ -70,7 +70,7 @@
     <section id="sobre-mi" class="sobre-mi seccion-oscura">
         <div class="contenedor">
             <h2 class="seccion-titulo">Conoce a Fanny Reyes</h2>
-            <p class="seccion-texto">Estoy aprendiendo a programar con HTML,CSS Y SCRIPT; Es algo nuevo que recomiendo saber para poder facilitar </p>
+            <p class="seccion-texto">Soy Estefania Antonio Reyes y estoy aprendiendo a programar con HTML,CSS Y SCRIPT </p>
         </div>
     </section>
 
@@ -106,7 +106,7 @@
                     <p class="experiencia-titulo">Estudiante</p>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, magnam modi nisi quam libero voluptatem incidunt ratione, recusandae quis nihil corrupti ad debitis eos optio. Culpa, cumque impedit. Quae, exercitationem?</p>
                     <div class="badgets-contenedor">
-                        <span class="badge text-bg-primary">Tecbolochicas PRO</span>
+                        <span class="badge text-bg-primary">Tecnolochicas PRO</span>
                         <span class="badge text-bg-primary">Desarrollo Web</span>
                         <span class="badge text-bg-primary">Java Script</span>
                     </div>
@@ -124,11 +124,11 @@
                 <!--Proyecto 1-->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="ima/moratProyecto1.jpg" alt="Proyecto 1">
+                        <img src="imagenes/moratProyecto1.jpg" alt="Proyecto 1">
                         <div class="overlay">
                             <p>Proyecto 1</p>
                             <div class="iconos-contenedor">
-                                <a href="#" target="_blank" rel="noopener ">
+                                <a href="#" target="_blank" rel="noopener noreferrer">
                                     <i class="bi bi-github"></i>
                                 </a>
                                 <a href="#"  referrerpolicy="nooper noreferrer">
@@ -141,11 +141,11 @@
                <!--Proyecto 2-->
                <div class="col-12 col-md-6 col-lg-4">
                 <div class="proyecto">
-                    <img src="ima/OIP.jpg" alt="Proyecto 2">
+                    <img src="imagenes/OIP.jpg" alt="Proyecto 2">
                     <div class="overlay">
                         <p>Proyecto 2</p>
                         <div class="iconos-contenedor">
-                            <a href="#" target="_blank" rel="noopener ">
+                            <a href="#" target="_blank" rel="noopener noreferrer">
                                 <i class="bi bi-github"></i>
                             </a>
                             <a href="#"  referrerpolicy="nooper noreferrer">
@@ -162,7 +162,7 @@
                     <div class="overlay">
                         <p>Proyecto 3</p>
                         <div class="iconos-contenedor">
-                            <a href="#" target="_blank" rel="noopener ">
+                            <a href="#" target="_blank" rel="noopener noreferrer">
                                 <i class="bi bi-github"></i>
                             </a>
                             <a href="#"  referrerpolicy="nooper noreferrer">
@@ -175,11 +175,11 @@
             <!--Proyecto 4-->
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="proyecto">
-                    <img src="ima/dua lipaProyec4.jpg" alt="Proyecto 4">
+                    <img src="imagenes/dua lipaProyec4.jpg" alt="Proyecto 4">
                     <div class="overlay">
                         <p>Proyecto 4</p>
                         <div class="iconos-contenedor">
-                            <a href="#" target="_blank" rel="noopener ">
+                            <a href="#" target="_blank" rel="noopener noreferrer">
                                 <i class="bi bi-github"></i>
                             </a>
                             <a href="#"  referrerpolicy="nooper noreferrer">
@@ -192,11 +192,11 @@
             <!--Proyecto 5-->
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="proyecto">
-                    <img src="ima/spidermanProyecto5.jpg" alt="Proyecto 5">
+                    <img src="imagenes/spidermanProyecto5.jpg" alt="Proyecto 5">
                     <div class="overlay">
                         <p>Proyecto 5</p>
                         <div class="iconos-contenedor">
-                            <a href="#" target="_blank" rel="noopener ">
+                            <a href="#" target="_blank" rel="noopener noreferrer">
                                 <i class="bi bi-github"></i>
                             </a>
                             <a href="#"  referrerpolicy="nooper noreferrer">
@@ -209,11 +209,11 @@
             <!--Proyecto 6-->
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="proyecto">
-                    <img src="ima/wosProyecto6.jpg" alt="Proyecto 6">
+                    <img src="imagenes/wosProyecto6.jpg" alt="Proyecto 6">
                     <div class="overlay">
                         <p>Proyecto 6</p>
                         <div class="iconos-contenedor">
-                            <a href="#" target="_blank" rel="noopener ">
+                            <a href="#" target="_blank" rel="noopener noreferrer">
                                 <i class="bi bi-github"></i>
                             </a>
                             <a href="#"  referrerpolicy="nooper noreferrer">
@@ -261,13 +261,9 @@
                     <li class="list-group-item">
                         Tips para buena aplicacion de CSS
                     </li>
-                </a>
-                
-
+                </a>               
             </ul>
-
         </div>
-    </section>
     <a href="#" target="_blank" rel="nooper noreferrer">
         <button type="button" class="btn btn-info">
             Ver más artículos
@@ -286,31 +282,31 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="container">
-                    <img class="testimonio-imagen rounded-circle" src="imagenes/cliente1.svg" alt="Foto de Monse">
-                    <p class="testimonio-texto">pertenecer a tecnolochicasPro fue una gran oportunidad para mi, la implementacion de mis conocimientos, los cuales me serviran para mi proxima carrera.</p>
+                    <img class="testimonio-imagen rounded-circle" src="imagenes/imagenesDesarrolladores/desarrollador2.svg" alt= "Foto de yess">
+                    <p class="testimonio-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis dolorum obcaecati fuga pariatur velit, aperiam quo voluptas repellendus. Nemo non error voluptatibus hic, voluptatum sit voluptas quos excepturi ad facilis.</p>
                     <div class="testimonio-info">
-                        <p class="cliente">monse</p>
-                        <p class="cargo">compañera de curso</p>
+                        <p class="cliente">yess</p>
+                        <p class="cargo">Testigo de trabajos realizados</p>
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="container">
-                    <img class="testimonio-imagen rounded-circle" src="imagenes/cliente2.svg" alt="Foto de Laura">
-                    <p class="testimonio-texto">el curso fue una oportunidad de aprender nuevas cosas</p>
+                    <img class="testimonio-imagen rounded-circle" src="imagenes/imagenesDesarrolladores/desarrollador1.svg" alt="Foto de Monse">
+                    <p class="testimonio-texto">pertenecer a tecnolochicasPro fue una gran oportunidad, ayudandole a la implementacion de sus conocimientos, los cuales le serviran para su proxima carrera.</p>
                     <div class="testimonio-info">
-                        <p class="cliente">Laura</p>
-                        <p class="cargo">Directora administrativa</p>
+                        <p class="cliente">Monse</p>
+                        <p class="cargo">Compañera de curso</p>
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="container">
-                    <img class="testimonio-imagen rounded-circle" src="imagenes/cliente3.svg" alt="Foto de Maritza">
-                    <p class="testimonio-texto"> El curso es una herramienta muy útil para el conocimiento de lenguajes de programación es muy importante ser autodidacta para adquirir nuevos conocimientos acerca de programación</p>
+                    <img class="testimonio-imagen rounded-circle" src="imagenes/imagenesDesarrolladores/desarrollador3.svg" alt="Foto de Maritza">
+                    <p class="testimonio-texto">El curso es una herramienta muy útil para el conocimiento de lenguajes de programación es muy importante ser autodidacta para adquirir nuevos conocimientos acerca de programación.</p>
                     <div class="testimonio-info">
                         <p class="cliente">Maritza</p>
-                        <p class="cargo">Embajadora Maritza</p>
+                        <p class="cargo">Embajadora</p>
                     </div>
                 </div>
             </div>
@@ -329,37 +325,40 @@
 <section id="contacto" class="contacto seccion-oscura">
     <div class="container">
         <div class="container text-center rectangulo -d-flex justify-content-evenly">
-            ¡hablemos!
-        </div>
-        <div class="col-12 col-md-4 description">
+            <div class="row">
+                <div class="col-12 col-md-4 seccion-titulo">
+                  ¡hablemos!  
+                </div>            
+            <div class="col-12 col-md-4 description">
             contanctame para iniciar su proyecto de desarrollo wed y hare que tu visita se vulva realidad
         </div>
         <div class="col-12 col-md-4">
-            <a href="fannyAr@56gmail.com">
+            <a href="ainafet05@gmail.com">
                 <button type="button">
                     Contacto
                 </button>
-            </a>
-        </div>
-
+                 </a>
+            </div>
+        </div>            
     </div>
+ </div>
 </section>
 <!-- Pie de pagina (footer) -->
 <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
     <img class="footer-logo" src="imagenes/icono-blanco.svg" alt="Logo del portafolio">
     <p class="footer-texto text-center">Aprendo y creo contenido todos los dias <br> creemos un proyecto juntas</p>
     <div class="iconos-redes-sociales -d-flex felx-wrap align-items-center justify-content-center">
-        <a href="#" target="_blank" rel="noreferrer">
+        <a href="#" target="_blank" rel="noopener noreferrer">
             <i class="bi bi-twitter"></i>
         </a>
-        <a href="#" target="_blank" rel="noreferrer">
+        <a href="#" target="_blank" rel="noopener noreferrer">
             <i class="bi bi-github"></i>
         </a>
-        <a href="#" target="_blank" rel="noreferrer">
+        <a href="#" target="_blank" rel="noopener noreferrer">
             <i class="bi bi-instagram"></i>
         </a>
-        <a href="fannyAr@56gmail.com" target="_blank" rel="noreferrer">
-            <i class="bi bi-evelope"></i>
+        <a href="ainafet05@gmail.com" target="_blank" rel="noreferrer">
+            <i class="bi bi-envelope"></i>
         </a>
     </div>
     <div class="derechos-de-autor">Creado por Fanny Reyes(2022) &#169;</div>
