--- a/index.html
+++ b/index.html
@@ -282,17 +282,17 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="container">
-                    <img class="testimonio-imagen rounded-circle" src="imagenes/imagenesDesarrolladores/desarrollador2.svg" alt= "Foto de yess">
-                    <p class="testimonio-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis dolorum obcaecati fuga pariatur velit, aperiam quo voluptas repellendus. Nemo non error voluptatibus hic, voluptatum sit voluptas quos excepturi ad facilis.</p>
+                    <img class="testimonio-imagen rounded-circle" src="imagenes/imagenesDesarrolladores/desarrollador1.svg" alt= "Foto de Fanny">
+                    <p class="testimonio-texto">Definitivamente fue una experiencia y dicha trajar con estos programas en compañia de un equipo muy bien organizado y ahora con lo aprendido ponerlo en practica. asi mismo esto me ayudara abrir caminos futuros.</p>
                     <div class="testimonio-info">
-                        <p class="cliente">yess</p>
-                        <p class="cargo">Testigo de trabajos realizados</p>
+                        <p class="cliente">Fanny</p>
+                        <p class="cargo">Estudiante</p>
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="container">
-                    <img class="testimonio-imagen rounded-circle" src="imagenes/imagenesDesarrolladores/desarrollador1.svg" alt="Foto de Monse">
+                    <img class="testimonio-imagen rounded-circle" src="imagenes/imagenesDesarrolladores/desarrollador2.svg" alt="Foto de Monse">
                     <p class="testimonio-texto">pertenecer a tecnolochicasPro fue una gran oportunidad, ayudandole a la implementacion de sus conocimientos, los cuales le serviran para su proxima carrera.</p>
                     <div class="testimonio-info">
                         <p class="cliente">Monse</p>
